<resources>

    <string name="app_name">Lens Reminder</string>
    <string name="version">1.1.1</string>
    <string name="version_code">1</string>
    <string name="days">Days Left</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_lens">Lens Reminder</string>
	<string name="setButton">SAVE</string>
	<string name="displayButton">Display</string>
	<string name="prescriptionMenu">Settings</string>
	<string name="About">About</string>
	<string name="defaultValue">00</string>
	<string name="newValue">New Lens</string>
	<string name="about">About</string>
	<string name="leftEye">Left Eye</string>
	<string name="rightEye">Right Eye</string>
	<string name="prescription">Prescription</string>
	<string name="leftReminder">I change my left lens every</string>
	<string name="rightReminder">I change my right lens every</string>
	<string name="prescriptionReminder">I order my prescription every</string>
	<string name="settingsButton">SAVE</string>	
	<color name="aqua">#00FFFF</color>
	<color name="lime">#00FF00</color>
	<color name="teal">#008080</color>
	<color name="blue">#0000FF</color>
	<color name="navy">#000080</color>
	<color name="black">#000000</color>
	<color name="white">#FFFFFF</color>
	<color name="steel">#336C9F</color>
	<color name="steelblue">#236B8E</color>
	<color name="spider"> #26466D</color>	
	<string name="facebook">Like us on facebook</string>
	<string name="email">Email Developers</string>
	<string name="email1">ananta.uprety@gmail.com</string>
	<string-array name="Numbers">
	    <item>1</item>
	    <item>2</item>
	    <item>3</item>
	    <item>4</item>
	    <item>5</item>
	    <item>6</item>
	    <item>7</item>
	    <item>8</item>
	    <item>9</item>
	</string-array>
	<string-array name="Units">
	    <item>Day</item>
	    <item>Week</item>
	    <item>Month</item>
	    <item>Year</item>	    
	</string-array>
	<string-array name="settings">
	    <item>Left Eye</item>
	    <item>Right Eye</item>
	    <item>Prescription</item>
	</string-array>	
	<string-array name="standardTime">
	    <item>Daily</item>
	    <item>Weekly</item>
	    <item>Biweekly</item>
	    <item>Monthly</item>
	    <item>Biannually</item>
	    <item>Annually</item>
	</string-array>
	<string-array name="presUnits">
	    <item>Biannually</item>
	    <item>Annually</item>
	</string-array>	
	<string-array name="aboutList">
	    <item>Lens Reminder</item>
	    <item>Version 2.1.0</item>
	    <item>Created by</item>
	    <item>Copyright 2012</item>
	</string-array>

	
	
</resources>