<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shaded_blue"
    android:orientation="horizontal" 
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/eyePosLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/leftEye"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewLeftDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/days_text"
            android:text="@string/days"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewLeftNum"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/days_text"
            android:layout_weight="1"
            android:text="@string/defaultValue"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/days_text" />

        <Button
            android:id="@+id/buttonLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newValue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/eyePosRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rightEye"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewRightDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/days_text"
            android:text="@string/days"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewRightNum"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_gravity="center_horizontal|center"
            android:layout_marginTop="@dimen/days_text"
            android:layout_weight="1"
            android:text="@string/defaultValue"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/days_text" />

        <Button
            android:id="@+id/buttonRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newValue" />
    </LinearLayout>

</LinearLayout>